<resources>
    <string name="app_name">DateNight</string>
    <string name="title_activity_main">DateNight</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="sign_up"><b>Sign Up</b></string>
    <string name="email">Enter your email address<font color="#F61515">*</font></string>
    <string name="title_activity_create_date">CreateDate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="casual">Casual</string>
    <string name="premium_experience">Premium</string>
    <string name="buy_datenight_coin">Buy DTC</string>
    <string name="version">Version</string>
    <string name="contact">Contact</string>
    <string name="logOut">Log Out</string>
    <string name="open_navigation">open</string>
    <string name="close_navigation">close</string>
    <string name="welcome_to_datenight">Welcome to DateNight</string>
    <string name="i_accept_the_terms_amp_conditions">I accept the <u><font color='#B048D1'>Terms &amp; Conditions</font></u></string>
    <string name="datehub">Datehub</string>
    <string name="datestats">Datestats</string>
    <string name="profile">Profile</string>
    <string name="edit_avatar"> <font color="#Fc3e7a">Edit Avatar</font></string>
    <string name="title_activity_test">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_activity_navigation_bottom">NavigationBottom</string>
    <string name="title_activity_nav_bottom">BottomNavActivity</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_activity_experience_type">ExperienceType</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="accounts">Account</string>
    <string name="buy_dtc">Buy DTC</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="chats">Chats</string>
    <string name="date_hub">Hub</string>
    <string name="my_dates">My Dates</string>
    <string name="average_date_rating">Your average date rating is </string>

    <string name="game_view_content_description">Game view</string>
    <string name="already_a_user_login">Already a user\?<b><font color="#B048D1"> Login</font></b></string>
    <string name="paris_night_dinner">paris night dinner</string>
    <string name="picnic_by_the_meadow">picnic by the meadow</string>
    <string name="free">FREE</string>
    <string name="love_in_the_clouds">love in the clouds</string>
    <string name="save_changes">Save changes</string>
    <string name="hint_email">datenight@gmail.com</string>
    <string name="enter_your_username">Enter your username<font color="#F61515">*</font></string>
    <string name="enter_your_date_of_birth">Enter your Date of birth<font color="#F61515">*</font></string>
    <string name="hint_two">damola</string>
    <string name="create_an_account">Create an account</string>
    <string name="text_pending_invitation">Your pending invitations are\nshown here</string>
    <string name="text_sheduled_date">Click on the plus icon at the\nbottom to start a new date</string>
    <string name="report_an_issue">Report an\nissue</string>
    <string name="suggest_which_features_you_d_like_to_nsee">Suggest which features you\'d like to\nsee…</string>
    <string name="tab_pending">Pending</string>
    <string name="tab_scheduled">Scheduled</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="title_activity_start_new_chat">StartNewChatActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="search_new_user_chat_hint">Search username...</string>
    <string name="search">Search</string>
    <string name="set_date_and_time">Set date and time</string>
    <string name="_20_000">20,000</string>
    <string name="_10_000">10,000</string>
    <string name="your_date_is_over">Your date is now over</string>
    <string name="what_to_do_next">What would you like to do next?</string>
    <string name="repeat_date">Repeat Date</string>
    <string name="rate_date">Rate Date</string>
    <string name="to_chat">To Chats</string>
    <string name="back_to_datehub">Back to DateHub</string>
    <string name="help_us_improve">Help us Improve</string>
    <string name="enter_your_email_username">Enter your email address</string>
    <string name="enter_your_password">Enter your password<font color="#F61515">*</font></string>
    <string name="no_user">No user found</string>
    <string name="date_schedule_invite"><font color='#000000'><b>Salome Wasui</b></font> is inviting you to <font color='#000000'><b>paris datenight</b></font></string>
    <string name="what_did_you_like">What did you like?</string>
    <string name="what_didnt_you_like">What didn\'t you like?</string>
    <string name="neg_review_hint">I didn\'t quite like...</string>
    <string name="pos_review_hint">I liked...</string>
    <string name="submit_response">Submit response</string>
    <string name="rate_your_Experience">Rate your experience</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="Experiences">Experiences</string>
    <string name="reject_invite">Reject Invite</string>
    <string name="accept_invite">Accept Invite</string>
    <string name="exp_val_free">Free</string>
    <string name="enter_email_username">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="new_to_datenight">New to DateNight?</string>
    <string name="create_account">Create account</string>
    <string name="congratulations">Congratulations</string>
    <string name="date_created_message">Your date has been created, click button <br>below to return to DateHub</br></string>
    <string name="valid_username">Username already exists</string>
    <string name="re_schedule_date">Update Date</string>
    <string name="join_date">Join Date</string>
    <string name="leave_date">Leave</string>
    <string name="invite_a_special_someone">Invite a special someone</string>
    <string name="give_yourself_a_username">Give yourself a username<font color="#F61515">*</font></string>
    <string name="enter_your_full_name">Enter your full name<font color="#F61515">*</font></string>
    <string name="enter_your_password_signup">Enter your password<font color="#F61515">*</font></string>
    <string name="enter_your_date_of_birth_signup">Enter your Date of birth<font color="#F61515">*</font></string>
    <string name="avatar_creation_info">After creating your avatar, don\'t forget to copy the generated link</string>
    <string name="edit_avatar_text">Edit Avatar</string>
    <string name="create_avatar_text">Create Avatar</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="verify_password">Enter your password again<font color="#F61515">*</font></string>
    <string name="no_such_user_text">No such user</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="text_scheduled_hint">Click on the plus icon at the bottom to\nstart a new date</string>
</resources>