<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.datehub_navigation.ui_fragments.dates.post_date.RateDateNightActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/rateDateNightToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/tool_bar_elevation"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/help_us_improve"
        app:titleTextColor="@color/black" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/rate_your_Experience"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rateDateNightToolbar" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter"
        android:text="@string/what_did_you_like"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starsLayout" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter"
        android:text="@string/what_didnt_you_like"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positiveReviewEditText" />

    <EditText
        android:id="@+id/positiveReviewEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_edittext_radius_5dp"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:gravity="start|top"
        android:hint="@string/pos_review_hint"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:minLines="1"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/starsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22">

        <ImageView
            android:id="@+id/star1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="setRatingOnStarClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_open_star" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="setRatingOnStarClick"
            app:layout_constraintEnd_toStartOf="@+id/star3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_open_star" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="setRatingOnStarClick"
            app:layout_constraintEnd_toStartOf="@+id/star4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_open_star" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="setRatingOnStarClick"
            app:layout_constraintEnd_toStartOf="@+id/star5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_open_star" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="setRatingOnStarClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star4"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_open_star" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/negativeReviewEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_edittext_radius_5dp"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:gravity="start|top"
        android:hint="@string/neg_review_hint"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:minLines="1"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <Button
        android:id="@+id/submitResponseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_login_button"
        android:onClick="onSubmit"
        android:text="@string/submit_response"
        android:textAllCaps="false"
        android:textColor="@color/date_night_pear"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/negativeReviewEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>