<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Damola Obaleke. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/date_night_purple"
    tools:context=".views.datehub_navigation.ui_fragments.dates.post_date.DateFinishedActivity">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/your_date_is_over"
        android:textColor="@color/date_night_pear"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter"
        android:text="@string/what_to_do_next"
        android:textColor="@color/date_night_pear"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/date_night_grey_300"
        app:layout_constraintBottom_toTopOf="@+id/helpUsImproveTextView"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter"
            android:text="@string/repeat_date"
            android:textAllCaps="true"
            android:textColor="@color/date_night_pear"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatDateButton" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter"
            android:text="@string/to_chat"
            android:textAllCaps="true"
            android:textColor="@color/date_night_pear"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toChatsButton" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter"
            android:text="@string/rate_date"
            android:textAllCaps="true"
            android:textColor="@color/date_night_pear"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/rateDateButton"
            app:layout_constraintStart_toStartOf="@+id/rateDateButton"
            app:layout_constraintTop_toBottomOf="@+id/rateDateButton" />

        <ImageButton
            android:id="@+id/rateDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="unveilRateUserBottomSheet"
            app:layout_constraintEnd_toStartOf="@+id/toChatsButton"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toEndOf="@+id/repeatDateButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_rate_date_icon" />

        <ImageButton
            android:id="@+id/toChatsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="backToInboxFragment"
            app:layout_constraintEnd_toEndOf="@+id/textView24"
            app:layout_constraintStart_toStartOf="@+id/textView24"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_go_to_chat_icon" />

        <ImageButton
            android:id="@+id/repeatDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@+id/textView25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_repeat_date_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/backToDateHubButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@drawable/custom_back_to_datehub_button"
        android:onClick="backToDateHubFragment"
        android:text="@string/back_to_datehub"
        android:textAllCaps="false"
        android:textColor="@color/date_night_pear_500"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/backToDateHubButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpUsImproveTextView"
        app:layout_constraintVertical_bias="0.508"
        app:srcCompat="@drawable/datenight_text_logo_white" />

    <TextView
        android:id="@+id/helpUsImproveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter"
        android:onClick="launchRateDateActivity"
        android:text="@string/help_us_improve"
        android:textAllCaps="true"
        android:textColor="@color/date_night_pear"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>