<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.datehub_navigation.ui_fragments.casual.CasualFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/paris"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--PB-->
        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:elevation="4dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/date_night_transparent"
            android:orientation="vertical">

            <!--Image-->

            <!--Title and supporting text-->
            <ImageView
                android:id="@+id/image_paris"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:scaleType="centerCrop"
                android:src="@drawable/paris" />

            <TextView
                android:id="@+id/experience_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paris_night_dinner"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:padding="2.5dp"
                android:alpha="0.9"
                android:background="@color/black"
                android:fontFamily="@font/inter"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cappaducia"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="14dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--PB-->
        <ProgressBar
            android:id="@+id/progressBarM"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:elevation="4dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_picnic"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/meadow" />

            <!--Title and supporting text-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/experience_name_capp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/picnic_by_the_meadow"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter"
                    android:textAppearance="?attr/textAppearanceHeadline6"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free"
                    android:textSize="12sp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textAppearance="?attr/textAppearanceBody2"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>